@@ -1,7 +1,5 @@
 #define PQXX_HAVE_PQDESCRIBEPORTAL 1
 #define PQXX_HAVE_PQENCRYPTPASSWORD 1
-#define PQXX_HAVE_PQESCAPEBYTEA 1
-#define PQXX_HAVE_PQESCAPEBYTEACONN 1
 #define PQXX_HAVE_PQESCAPESTRING 1
 #define PQXX_HAVE_PQESCAPESTRINGCONN 1
 #define PQXX_HAVE_PQEXECPARAMS 1
